<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_item_list"
        android:title="@string/bottom_nav_item_list"
        android:icon="@drawable/ic_list" />
    <item
        android:id="@+id/bottom_nav_item_scaling"
        android:title="@string/bottom_nav_item_scaling"
        android:icon="@drawable/ic_scaling" />
    <item
        android:id="@+id/bottom_nav_item_parsing"
        android:title="@string/bottom_nav_item_parsing"
        android:icon="@drawable/ic_parsing" />
    <item
        android:id="@+id/bottom_nav_item_map"
        android:title="@string/bottom_nav_item_map"
        android:icon="@drawable/ic_map" />
    <item
        android:id="@+id/bottom_nav_item_settings"
        android:title="@string/bottom_nav_item_settings"
        android:icon="@drawable/ic_settings" />
</menu>